OMG MATH and reindenting